[package]
name = "treeflection"
version = "0.1.17"
authors = ["Rukai <rubickent@gmail.com>"]
description = "A library that provides reflection for tree structures"
license = "MIT"
repository = "https://github.com/rukai/treeflection"
keywords = ["reflection", "tree", "treeflection"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
itertools = "0.6"

[dev-dependencies]
matches = "0.1"
