[package]
name = "treeflection"
version = "0.1.30"
authors = ["Rukai <rubickent@gmail.com>"]
description = "A library that provides reflection for tree structures"
license = "MIT"
repository = "https://github.com/rukai/treeflection"
keywords = ["reflection", "tree", "treeflection"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
itertools = "0.6"

[dev-dependencies]
matches = "0.1"
