[package]
name = "treeflection"
version = "0.1.32"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "A library that provides reflection for tree structures"
license = "MIT"
repository = "https://github.com/rukai/treeflection"
keywords = ["reflection", "tree", "treeflection"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.9"

[dev-dependencies]
matches = "0.1"
