[package]
name = "treeflection_derive"
version = "0.2.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "#[derive(Node)] macro for the Treeflection library"
license = "MIT"
repository = "https://github.com/rukai/treeflection"
keywords = ["reflection", "tree", "treeflection"]

[lib]
proc-macro = true

[dependencies]
syn = "0.13"
quote = "0.5"
serde = "1"
serde_json = "1"
proc-macro2 = { version = "0.3", features = ["nightly"] }

[dev-dependencies]
matches = "0.1"
treeflection = { path = "../treeflection", version = "0.1" }
serde_derive = "1"
