[package]
name = "treeflection_derive"
version = "0.3.2"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "#[derive(Node)] macro for the Treeflection library"
license = "MIT"
repository = "https://github.com/rukai/treeflection"
keywords = ["reflection", "tree", "treeflection"]

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
serde = "1"
serde_json = "1"
proc-macro2 = "1"

[dev-dependencies]
matches = "0.1"
treeflection = { path = "../treeflection", version = "0.1" }
serde_derive = "1"
