[package]
name = "treeflection_derive_tests"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]

[dev-dependencies]
matches = "0.1.4"
treeflection = { path = "../treeflection" }
treeflection_derive = { path = "../treeflection_derive" }
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"

[[test]]
name = "test"
path = "test.rs"
