[package]
name = "treeflection_derive_tests"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]

[dev-dependencies]
matches = "0.1.4"
treeflection = { path = "../treeflection" }
treeflection_derive = { path = "../treeflection_derive" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[test]]
name = "test"
path = "test.rs"
